--- a/src/components/CraftTable/CraftTable.module.scss
+++ b/src/components/CraftTable/CraftTable.module.scss
@@ -13,35 +13,53 @@ $tier4_color: #8bd4ff;
         table {
             border-collapse: collapse;
         }
-    
-        .first_table {
-            width: 660px;
-            table-layout: fixed;
-            display: inline-block;
-            background-color: white;
-
-            td, th {
-                max-width: 100px;
-                min-width: 100px;
-                text-align: center;
-                height: 24px;
-                white-space: nowrap;
-                overflow: hidden !important;
-                text-overflow: ellipsis;
-                
-                &:last-child {
-                    width: 100%;
-                }
+        .header {
+            background-color: $tier4_color;
+            height: 33px;
+            width: 100%;
+            padding-left: 30px;
+            padding-right: 30px;
+            text-transform: uppercase;
+            font-weight: 600;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            
+            .options {
+                width: 100px;
+                display: flex;
+                justify-content: space-between;
             }
 
-            thead {
-                background-color: $tier4_color;
-                height: 33px;
-                width: 100%;
-                th {
-                    text-align: left;
-                    padding-left: 30px;
-                    text-transform: uppercase;
+        }
+        
+        .first_table {
+            width: 660px;
+            
+            .tableSlider {
+                
+                .hide {
+                    display: none;
+                }
+
+                table {
+                    table-layout: fixed;
+                    display: block;
+                    background-color: white;
+                    width: 100%;
+                }
+                td, th {
+                    max-width: 100px;
+                    min-width: 100px;
+                    text-align: center;
+                    height: 24px;
+                    white-space: nowrap;
+                    overflow: hidden !important;
+                    text-overflow: ellipsis;
+                    
+                    &:last-child {
+                        width: 100%;
+                    }
                 }
             }
         }
@@ -77,7 +95,6 @@ $tier4_color: #8bd4ff;
             .third_table {
                 width: 100%;
                 
-                
                 tr th:nth-child(n+4),
                 tr td:nth-child(n+4) {
                     width: 50px;
@@ -87,4 +104,13 @@ $tier4_color: #8bd4ff;
         }
     }
 
+}
+
+
+input {
+    background-color: lighten($tier4_color, 15%);
+    border: none;
+    width: 100%;
+    text-align: center;
+    font-size: inherit;
 }
