Many changes after pause

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -15,6 +15,7 @@ $clickedDarken_percent: 30%;
     font-size: 18px;
     cursor: pointer;
     background-color: $updateButton_color;
+    border: none;
 }
 
 .tierButton {
