--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
     font-family: 'Inter', system-ui;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #FFF;
+    background-color: #EEEEF0;
 }
 
 * {
