--- a/src/components/CraftTable/CraftItemName/CraftItemName.module.scss
+++ b/src/components/CraftTable/CraftItemName/CraftItemName.module.scss
@@ -1,7 +1,8 @@
 $tier4_color: #8bd4ff;
+@import '../../../styles/variables';
 
 .header {
-  background-color: $tier4_color;
+  // background-color: $tier4_color;
   height: 33px;
   width: 100%;
   padding-left: 30px;
@@ -12,6 +13,7 @@ $tier4_color: #8bd4ff;
   justify-content: space-between;
   align-items: center;
 
+  
   .options {
     width: 100px;
     display: flex;
@@ -26,9 +28,9 @@ $tier4_color: #8bd4ff;
 .option {
   background-image: linear-gradient(
     92.88deg,
-    #136fa0 9.16%,
-    #226584 43.89%,
-    #136fa0 64.72%
+    #05141c 9.16%,
+    #000000 43.89%,
+    #000000 64.72%
   );
   border-radius: 2px;
   border-style: none;
@@ -50,13 +52,33 @@ $tier4_color: #8bd4ff;
   touch-action: manipulation;
 }
 
-button:hover {
+.option:hover {
   background-image: linear-gradient(
     92.88deg,
-    #319dd7 9.16%,
-    #319dd7 43.89%,
-    #319dd7 64.72%
+    #a7a7a7 9.16%,
+    #a7a7a7 43.89%,
+    #a7a7a7 64.72%
   );
   box-shadow: rgba(63, 125, 205, 0.5) 0 1px 10px;
   transition-duration: 0.1s;
 }
+
+
+.tier4 {
+  background-color: $tier4_color;
+}
+.tier5 {
+  background-color: $tier5_color;
+}
+.tier6 {
+  background-color: $tier6_color;
+}
+.tier7 {
+  background-color: $tier7_color;
+}
+.tier8 {
+  background-color: $tier8_color;
+}
+
+
+
