--- a/src/components/CraftTable/CraftTable.module.scss
+++ b/src/components/CraftTable/CraftTable.module.scss
@@ -13,7 +13,6 @@
 
 
   .left {
-    // background-color: #b2b2b258;
     .tables_section {
       padding: 65px;
   
@@ -23,7 +22,7 @@
     }
   }
   .right {
-    background: linear-gradient(90deg, rgba(178,178,178,0) 0%, rgba(195,194,194,0.7) 30%, rgba(195,194,194,1) 100%);
+    background: linear-gradient(90deg, rgba(178,178,178,0) 0%, rgba(164, 164, 164, 0.7) 40%, rgb(137, 137, 137) 100%);
     width: 100%;
     height: 100%;
     display: flex;
@@ -31,7 +30,7 @@
     .content {
       width: 100%;
       padding: 65px;
-      background-color: rgba($color: #000000, $alpha: 0.3)
+      // background-color: rgba($color: #000000, $alpha: 0.3)
     }
   }
 }
