--- a/src/components/CraftTable/SecondTable/SecondTable.module.scss
+++ b/src/components/CraftTable/SecondTable/SecondTable.module.scss
@@ -1,32 +1,26 @@
 @import '../../../styles/variables';
 
-.calculations {
+.secondTable {
     margin-top: 30px;
-    width: 650px;
-    display: flex;
-    justify-content: space-between;
 
     table {
         table-layout: fixed;
-    }
-
-    td, th {
-        text-align: center;
-        height: 24px;
-        background-color: white;
-        width: 100px;
-    }
-
-    .second_table {
-        width: 250px;
+        width: 230px;
         margin-right: 10px;
-
 
         tr th:first-child,
         tr td:first-child {
             width: 50px;
         }
     }
+
+    td, th {
+        text-align: center;
+        height: 24px;
+        background-color: white;
+        width: 80px;
+    }
+
 }
 
 
