Divided makers and accordion

--- a/src/components/ArtefactTable/ArtefactTable.module.scss
+++ b/src/components/ArtefactTable/ArtefactTable.module.scss
@@ -1,7 +1,7 @@
 $tier4_color: hsl(0, 0%, 100%);
 
 .resourceTable {
-    margin-left: 80px;
+    // margin-left: 80px;
     margin-bottom: 30px;
     
     th, tr, td {
