--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -1,15 +1,14 @@
 .wrapper {
-    width: 1440px;
+    max-width: 1440px;
     margin: 0 auto;
-
-    
 }
 
 .accordion {
     display: flex;
     flex-direction: column;
     .accordionTitle {
-        background-color: rgb(150, 150, 253);
+        background-color: rgba(255, 255, 255, 0.758);
+        width: 100%;
         height: 50px;
         font-size: 24px;
         font-weight: 600;
@@ -17,9 +16,23 @@
         align-items: center;
         cursor: pointer;
         margin-bottom: 20px;
+        justify-content: space-between;
+        transition: all 0.2s ease-in;
+        // outline: 1px rgb(205, 205, 205) solid;
+        &:hover {
+            transform: scale(1.03);
+            transition: all 0.3s ease-out;
+            box-shadow: 0px 0px 20px 6px rgba(34, 60, 80, 0.08);
+        }
 
-        span {
+        .title {
             margin-left: 60px;
+            width: 150px;
+        }
+        .length {
+            width: 150px;
+            color: rgba(137, 137, 137, 0.76);
+            font-size: 17px;
         }
 
     }
