--- a/src/components/CraftTable/CraftTable.module.scss
+++ b/src/components/CraftTable/CraftTable.module.scss
@@ -29,7 +29,7 @@
     }
   }
   .right {
-    background: linear-gradient(90deg, rgba(178,178,178,0) 0%, rgba(164, 164, 164, 0.7) 40%, rgb(137, 137, 137) 100%);
+    // background: linear-gradient(90deg, rgba(178,178,178,0) 0%, rgba(164, 164, 164, 0.7) 40%, rgb(137, 137, 137) 100%);
     width: 100%;
     height: 100%;
     display: flex;
