--- a/src/components/ResourceTable/ResourceTable.module.scss
+++ b/src/components/ResourceTable/ResourceTable.module.scss
@@ -1,7 +1,7 @@
 @import '../../styles/variables';
 
 .resourceTable {
-    margin-left: 80px;
+    // margin-left: 80px;
     margin-bottom: 30px;
     
     th, tr, td {
