Starting Journals section

--- a/src/components/JournalTable/JournalTable.module.scss
+++ b/src/components/JournalTable/JournalTable.module.scss
@@ -1,8 +1,6 @@
-.resourceTable {
-    // margin-left: 80px;
-    margin-bottom: 30px;
+.wrapper {
+    // background-color: blue;
     width: 100%;
-    
     th, tr, td {
         background-color: rgb(255, 255, 255);
         border-radius: 6px;
@@ -12,7 +10,6 @@
         text-align: center;
         vertical-align: middle;
     }
-    
     tr th:first-child,
     tr td:first-child {
         max-width: 154px;
@@ -27,5 +24,9 @@
     th {
         background-color: hsl(0, 0%, 100%);
     }
+
 }
 
+.makerTable {
+    margin-top: 10px;
+}
