--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -22,7 +22,7 @@
 .modalContent {
     padding: 20px;
     border-radius: 6px;
-    background-color: #c9c9c9;
+    background-color: #efefef;
     width: 800px;
     height: 800px;
     transform: scale(0.5);
