--- a/src/components/CityBonus/CityBonus.module.scss
+++ b/src/components/CityBonus/CityBonus.module.scss
@@ -39,6 +39,13 @@
                 font-size: 16px; 
                 text-align-last:center;   
             }
+
+            .returnRate{
+                width: 60px;
+                height: 30px;
+                font-size: 16px; 
+
+            }
         }
     }
 }
