--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -24,10 +24,32 @@
             transition: all 0.3s ease-out;
             box-shadow: 0px 0px 20px 6px rgba(34, 60, 80, 0.08);
         }
+        .titleBox{
+            display: flex;
+            height: 100%;
+            align-items: center;
 
-        .title {
-            margin-left: 60px;
-            width: 150px;
+            .title {
+                width: 200px;
+                height: 100%;
+                background-color: rgb(208, 208, 208);
+                padding: 0 60px;
+                margin-right: 40px; 
+                display: flex;
+                align-items: center;
+            }
+            .fee {
+                font-size: 20px;
+                color: rgb(175, 175, 175);
+            }
+            input {
+                margin-left: 20px;
+                background-color: rgba(236, 236, 236, 0.388);
+                outline: 1px solid rgb(218, 218, 218);
+                width: 100px;
+                font-size: 20px;
+            }
+
         }
         .length {
             width: 150px;
