--- a/src/index.scss
+++ b/src/index.scss
@@ -17,6 +17,8 @@ body {
     background: #FFFFFF;
     max-width: 100vw;
     margin: 0 auto;
+    // display: flex;
+    // flex-direction: column;
 }
 
 
