--- a/src/containers/BlogContainer/BlogContainer.module.scss
+++ b/src/containers/BlogContainer/BlogContainer.module.scss
@@ -2,4 +2,8 @@
     // background-color: bisque;
     width: 900px;
     margin: 0 auto;
+
+    .cardContainer {
+        margin-top: 100px;
+    }
 }
