--- a/src/containers/HomeContainer/HomeContainer.module.scss
+++ b/src/containers/HomeContainer/HomeContainer.module.scss
@@ -1,5 +1,12 @@
 .container {
-    width: 400px;
-    height: 200px;
+    width: 100%;
+    height: 100vh;
     background-color: rgba(93, 93, 223, 0.407);
+    display: flex;
+    justify-content: center;
+    .wrapper {
+        width: 1440px;
+        height: 100%;
+        background-color: rgb(251, 152, 152);
+    }
 }
