--- a/src/containers/RegisterContainer/RegisterContainer.module.scss
+++ b/src/containers/RegisterContainer/RegisterContainer.module.scss
@@ -1,67 +1,70 @@
-.login {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    z-index: -1;
+.main {
+    width: 100%;
+    height: 100vh;
 
-    .form_container {
-        width: 400px;
-        height: 400px;
+    .login {
         display: flex;
+        flex-direction: column;
         justify-content: center;
-        h1 {
-            margin-top: 50px;
-            width: 200px;
-            position: absolute;
-
-        }
-        .form {
-            border-radius: 5px;
-            background-color: #ffffffd4;
-            width: 100%;
-            height: 100%;
+        align-items: center;
+        width: 100%;
+        height: 100%;
+    
+        .form_container {
+            width: 400px;
+            height: 400px;
             display: flex;
-            flex-direction: column;
             justify-content: center;
-            align-items: center;
-            box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-            
-
-            .form_line {
+            h1 {
+                margin-top: 50px;
                 width: 200px;
-                input {
-                    border-radius: inherit;
-                    border: 1px solid gray;
-                    height: 30px;
-                    width: 100%;
-                    margin-bottom: 20px;
-                }
-                button {
-                    height: 30px;
-                    width: 100%;
-                    background-color: transparent;
-                    border: 1px solid gray;
-                    cursor: pointer;
-                    &:hover {
-                        background-color: #FF5C00;
+                position: absolute;
+    
+            }
+            .form {
+                border-radius: 5px;
+                background-color: #ffffffd4;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+                
+    
+                .form_line {
+                    width: 200px;
+                    input {
+                        border-radius: inherit;
+                        border: 1px solid gray;
+                        height: 30px;
+                        width: 100%;
+                        margin-bottom: 20px;
+                    }
+                    button {
+                        height: 30px;
+                        width: 100%;
+                        background-color: transparent;
+                        border: 1px solid gray;
+                        cursor: pointer;
+                        &:hover {
+                            background-color: #FF5C00;
+                        }
                     }
                 }
-            }
-
-            
-            .errorMessage {
-                color: red;
-                width: 200px;
-                height: 40px;
-                font-size: 13px;
+    
+                
+                .errorMessage {
+                    color: red;
+                    width: 200px;
+                    height: 40px;
+                    font-size: 13px;
+                }
             }
         }
+        
     }
     
 }
+
