--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,9 @@ body {
     -moz-osx-font-smoothing: grayscale;
     background-color: #EEEEF0;
     overflow-y: scroll;
+    // min-height: 100vh;
+    // display: flex;
+    // flex-direction: column;
 }
 
 * {
@@ -14,11 +17,17 @@ body {
 }
 
 .wrapper{
-    background: #FFFFFF;
     max-width: 100vw;
     margin: 0 auto;
-    // display: flex;
-    // flex-direction: column;
+    // min-height: 100px;
+    display: flex;
+    flex-direction: column;
+    
+    // .content {
+    //     // Full height - Footer hiegh - header height
+    //     min-height: calc(100vh - 150px - 57px);
+    //     padding-bottom: 200px;
+    // }
 }
 
 
