--- a/src/components/BlogCard/BlogCard.module.scss
+++ b/src/components/BlogCard/BlogCard.module.scss
@@ -1,7 +1,46 @@
 .card {
     background-color: rgb(255, 255, 255);
     box-shadow: 0px 0px 20px 5px rgba(195, 195, 195, 0.688);
-    height: 200px;
+    // height: 100px;
     width: 100%;
-    margin-bottom: 50px;
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    transition: all 0.2s ease-in;
+    padding-left: 50px;
+
+    &:hover {
+        transform: scale(1.03);
+        transition: all 0.3s ease-out;
+        box-shadow: 0px 0px 20px 6px rgba(34, 60, 80, 0.08);
+    }
+
+    .upperPart {
+        display: flex;
+        flex-direction: row;
+        .title {
+            // background-color: red;
+            width: 100%;
+            height: 60px;
+            line-height: 60px;
+            font-size: 30px;
+            font-weight: 500;
+            // text-decoration-line: underline;
+            
+        }
+        .date {
+            width: 150px;
+            line-height: 60px;
+            color: rgba(137, 137, 137, 0.76);
+        }
+    }
+    .downPart {
+        height: 30px;
+        .section {
+            background-color: rgb(157, 173, 255);
+            padding: 0 10px;
+            border-radius: 20px;
+        }
+    }
 }
