--- a/src/index.scss
+++ b/src/index.scss
@@ -23,11 +23,14 @@ body {
     display: flex;
     flex-direction: column;
     
-    // .content {
-    //     // Full height - Footer hiegh - header height
-    //     min-height: calc(100vh - 150px - 57px);
-    //     padding-bottom: 200px;
-    // }
+    .content {
+        // Full height - Footer hiegh - header height
+        min-height: calc(100vh);
+        // padding-bottom: 200px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
 
 
