--- a/src/components/CraftTable/ThirdTable/ThirdTable.module.scss
+++ b/src/components/CraftTable/ThirdTable/ThirdTable.module.scss
@@ -18,13 +18,16 @@
         background-color: white;
 
         &:nth-child(n):nth-last-child(n+3){
-            width: 100px;
+            min-width: 100px;
+            max-width: 100px;
         }
         &:nth-child(4){
-            width: 60px;
+            min-width: 60px;
+            max-width: 60px;
         }
         &:nth-child(5){
-            width: 50px;
+            min-width: 50px;
+            max-width: 50px;
         }
     }
 }
