--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,64 +1,68 @@
-.wrapper {
+.main {
+    width: 100%;
+    background-color: rgb(255, 255, 255);
+    .wrapper {
 
-    display: flex;
-    justify-content: center;
-    border-bottom: 2px solid #EEEEF0;
-
-    .header {
-        height: 55px;
         display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 70px;
-        width: 1440px;
+        justify-content: center;
+        border-bottom: 2px solid #dedede;
     
-        .logo_text {
-            width: 300px;
-            text-transform: uppercase;
-        }
-    
-        h3:hover{
-            color: #696969;
-            transition: 0.2s;
-        }
-    
-        ul {
+        .header {
+            height: 55px;
             display: flex;
-            height: 100%;
-    
-            li{
-                width: 200px;
-                display: inline-flex;
-                justify-content: center;
-                align-items: center;
+            align-items: center;
+            justify-content: space-between;
+            padding: 0 70px;
+            width: 1440px;
+        
+            .logo_text {
+                width: 300px;
+                text-transform: uppercase;
+            }
+        
+            h3:hover{
+                color: #696969;
+                transition: 0.2s;
+            }
+        
+            ul {
+                display: flex;
                 height: 100%;
-                font-size: 20px;
-                cursor: pointer;
-    
-                &:hover {
-                    background-color: #FF5C00;
-                    transition: 0.2s;
+        
+                li{
+                    width: 200px;
+                    display: inline-flex;
+                    justify-content: center;
+                    align-items: center;
+                    height: 100%;
+                    font-size: 20px;
+                    cursor: pointer;
+        
+                    &:hover {
+                        background-color: #FF5C00;
+                        transition: 0.2s;
+                    }
                 }
             }
-        }
-        .auth_container {
-            width: 300px;
-            display: flex;
-            justify-content:space-evenly;
-        }
-        .auth{
-            cursor: pointer;
-            font-size: 15px;
-            &:hover {
-                color: rgba(0,0,0,0.5);
+            .auth_container {
+                width: 300px;
+                display: flex;
+                justify-content:space-evenly;
             }
-        }
-    
-        button {
-            background-color: transparent;
-            border: none;
-            cursor: pointer;
-            font-size: 15px;
+            .auth{
+                cursor: pointer;
+                font-size: 15px;
+                &:hover {
+                    color: rgba(0,0,0,0.5);
+                }
+            }
+        
+            button {
+                background-color: transparent;
+                border: none;
+                cursor: pointer;
+                font-size: 15px;
+            }
         }
     }
 }
