--- a/src/components/ItemChooseSection/ItemChooseSection.module.scss
+++ b/src/components/ItemChooseSection/ItemChooseSection.module.scss
@@ -1,25 +1,21 @@
-.wrapper {
+.main {
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 60px;
+  width: 1440px;
+
+  .chooseButtons {
     display: flex;
-    justify-content: center;
-    .itemChoose {
-        height: 200px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 0 60px;
-        width: 1440px;
-    
-        .chooseButtons {
-            display: flex;
-            justify-content: space-between;
-            width: 332px;
-            height: 90px;
-            
-            img {
-                width: 90px;
-                height: 90px;
-                cursor: pointer;
-            }
-        }
+    justify-content: space-between;
+    width: 332px;
+    height: 90px;
+
+    img {
+      width: 90px;
+      height: 90px;
+      cursor: pointer;
     }
+  }
 }
